--- a/index.html
+++ b/index.html
@@ -4,11 +4,50 @@
 <head>
     <title>Home Twon Site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Island+Moments&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
-    <div id="hero">
-        
+<body class="happy-monkey-regular">
+    <div id="hero-section">
+        <div id="hero-txt">
+            <h1>Explore Amman</h1>
+            <h2>Visit amman resturants and cafes and malls</h2>
+        </div>
+    </div>
+    <div id="middle-section">
+        <h2>Places to visit in Amman</h2>
+        <div id="places">
+            <div id="resturants" class="flex-place-items">
+                <img src="imgs/resturants.jpg" alt="food image that represents resturants">
+                <h3>Resturants</h3>
+                <!-- <p>Here is a list of Suggested resturants to visit in amman</p> -->
+                <p>Here is a list of Suggested malls to visit in amman</p>
+            </div>
+            <div id="cafes" class="flex-place-items">
+                <img src="imgs/cafes.jpeg" alt="cafe image">
+                <h3>Cafes</h3>
+                <!-- <p>Here is a list of Suggested cafes to visit in amman</p> -->
+                <p>Here is a list of Suggested malls to visit in amman</p>
+            </div>
+            <div id="malls" class="flex-place-items">
+                <img src="imgs/malls3.jpg" alt="mall image">
+                <h3>Malls</h3>
+                <p>Here is a list of Suggested malls to visit in amman</p>
+                <!-- <p>Here is a list</p> -->
+            </div>
+        </div>
+    </div>
+    <div id="card">
+        <img src="imgs/guide-pic.png" alt="tour guide profile pic">
+        <div id="card-txt">
+            <h2>Your Guide</h2>
+            <p>"I've lived in Amman for the whole of my life, so you can trust me to take you a tour in amman to
+                have the best time in your life"</p>
+            <h3>Amman Tour Guide</h3>
+        </div>
     </div>
 </body>
 
