adding spaces between sections

--- a/index.html
+++ b/index.html
@@ -13,40 +13,36 @@
 
 <body class="happy-monkey-regular">
     <div id="hero-section">
-        <div id="hero-txt">
-            <h1>Explore Amman</h1>
-            <h2>Visit amman resturants and cafes and malls</h2>
-        </div>
+        <h1>Explore Amman</h1>
+        <h2>Where history meets modern lifestyle</h2>
     </div>
     <div id="middle-section">
-        <h2>Places to visit in Amman</h2>
+        <!-- <h2>Places to visit in Amman</h2> -->
         <div id="places">
             <div id="resturants" class="flex-place-items">
                 <img src="imgs/resturants.jpg" alt="food image that represents resturants">
                 <h3>Resturants</h3>
-                <!-- <p>Here is a list of Suggested resturants to visit in amman</p> -->
-                <p>Here is a list of Suggested malls to visit in amman</p>
+                <p>Enjoy authentic Jordanian flavors and world-class dining spots across Amman.</p>
             </div>
             <div id="cafes" class="flex-place-items">
                 <img src="imgs/cafes.jpeg" alt="cafe image">
                 <h3>Cafes</h3>
-                <!-- <p>Here is a list of Suggested cafes to visit in amman</p> -->
-                <p>Here is a list of Suggested malls to visit in amman</p>
+                <p>Experience the city’s best cafes, from traditional spots to trendy favorites.</p>
             </div>
             <div id="malls" class="flex-place-items">
-                <img src="imgs/malls3.jpg" alt="mall image">
+                <img src="imgs/malls.jpg" alt="mall image">
                 <h3>Malls</h3>
-                <p>Here is a list of Suggested malls to visit in amman</p>
-                <!-- <p>Here is a list</p> -->
+                <p>Shop, dine, and unwind in Amman’s modern malls and vibrant shopping centers.</p>
             </div>
         </div>
     </div>
     <div id="card">
-        <img src="imgs/guide-pic.png" alt="tour guide profile pic">
+        <img src="imgs/tour-guide-pic1.png" alt="tour guide profile pic">
         <div id="card-txt">
             <h2>Your Guide</h2>
-            <p>"I've lived in Amman for the whole of my life, so you can trust me to take you a tour in amman to
-                have the best time in your life"</p>
+            <p>"As a lifelong local, I know every corner of Amman — join me and experience the city like never before!"
+            </p>
+            <p id="note">By the way this is not my real pic 🙂</p>
             <h3>Amman Tour Guide</h3>
         </div>
     </div>
