--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>"As a lifelong local, I know every corner of Amman — join me and experience the city like never before!"
             </p>
             <p id="note">By the way this is not my real pic 🙂</p>
-            <h3>Amman Tour Guide</h3>
+            <h3>Abdalla Ahmad</h3>
         </div>
     </div>
 </body>
